middleman deployじゃないほうテスト

--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -1,7 +1,9 @@
 ---
+title:     BLOG | CKID84
 pageable: true
 per_page: 10
 ---
+
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
