--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,7 +15,7 @@
 
     <div class="container">
       <header>
-        <h1>kid84 blog</h1>
+        <h1>kid84 blog test</h1>
         <nav>
           <ul>
             <li><a href="/">home</a></li>
