Blogの表示だけは完成

--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -3,7 +3,7 @@ title:     BLOG | KID84
 pageable: true
 per_page: 10
 ---
-
+<h1>Blog</h1>
 <% if paginate && num_pages > 1 %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
