--- a/source/stylesheets/include/_setting.scss
+++ b/source/stylesheets/include/_setting.scss
@@ -14,3 +14,4 @@ $base-font-size: 14px;
 $base-font-family: 'Lato','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
 $base-line-height: 1.5em;
 $base-link-color:#00a8bd;
+$point-color:#00a8bd;
