--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,21 +14,14 @@
   <body>
     <div class="container">
       <header>
-        <h1>kid84 blog</h1>
-        <nav>
-          <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="blog">blog</a></li>
-            <li><a href="about">about</a></li>
-            <li><a href="works">works</a></li>
-          </ul>
-        </nav>
+        <h1>kid84</h1>
+        <%= partial "header" %>
       </header>
       <div id="main" role="main">
         <%= yield %>
       </div>
     
-      <aside>
+      <!-- <aside>
         <h2>Recent Articles</h2>
         <ol>
           <% blog.articles[0...10].each do |article| %>
@@ -49,7 +42,7 @@
             <li><%= link_to "#{year} (#{articles.size})", blog_year_path(year) %></li>
           <% end %>
         </ol>
-      </aside>
+      </aside> -->
     </div>
   </body>
 </html>
