--- a/source/layouts/post.erb
+++ b/source/layouts/post.erb
@@ -15,13 +15,7 @@
     <div class="container">
       <header>
         <h1>kid84 blog</h1>
-        <nav>
-          <ul>
-            <li><a href="blog">blog</a></li>
-            <li><a href="about">about</a></li>
-            <li><a href="works">works</a></li>
-          </ul>
-        </nav>
+        <%= partial "header" %>
       </header>
       
       <div id="main" role="main">
