processing部分一旦コミット

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,3 +3,8 @@ pageable: true
 per_page: 10
 ---
 <!-- <h1>index</h1> -->
+<script>
+  $(function(){
+    $('body').append("<div id='canvasContainer'><canvas data-processing-sources='javascripts/20140518.pjs'></canvas></div>");
+  });
+</script>
