--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -24,3 +24,10 @@ h2{
 	border-left: 5px solid #666;
 	padding-left: 5px;
 }
+#canvasContainer{
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	overflow: hidden;
+	position: fixed;
+}
