--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,2 +1,6 @@
-<p>Takuya Hashikawa</p>
-<p>designer / developer</p>
+<div class="about-me">
+    <img src="images/about/hashikawa.jpg" alt="kid84">
+    <p>Takuya Hashikawa</p>
+    <p>Web Designer / Interctive Designer</p>
+    <p>Tokyo / Japan</p>
+</div>
