--- a/source/layouts/post.erb
+++ b/source/layouts/post.erb
@@ -8,13 +8,13 @@
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <script src="javascripts/jquery-2.1.0.min.js"></script>
     <script src="javascripts/script.js"></script>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
   </head>
   <body>
 
     <div class="container">
       <header>
-        <h1>kid84 blog</h1>
+        <h1>kid84 blog+</h1>
         <%= partial "header" %>
       </header>
       
