cavas100%をちょっとだけまともに

--- a/source/stylesheets/include/_base.scss
+++ b/source/stylesheets/include/_base.scss
@@ -6,6 +6,9 @@ body{
     line-height: $base-line-height;
     width: 100%;
     border-top: 5px solid $point-color;
+    overflow: auto;
+    position: relative;
+    z-index: 1;
 }
 a {
     color: $base-link-color;
