--- a/source/stylesheets/include/_setting.scss
+++ b/source/stylesheets/include/_setting.scss
@@ -17,6 +17,9 @@ $base-link-color:#00a8bd;
 $point-color:#00a8bd;
 
 
+//
+$wrapper-width:960px;
+
 // プリフィックス解除
 $experimental-support-for-opera:false;
 $experimental-support-for-microsoft:false;
