--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,9 +2,10 @@
 pageable: true
 per_page: 10
 ---
-<!-- <h1>index</h1> -->
 <script>
   $(function(){
-    $('body').append("<div id='canvasContainer'><canvas data-processing-sources='javascripts/20140518.pjs'></canvas></div>");
+    $('.container').append("<canvas data-processing-sources='javascripts/20140518.pjs'></canvas>");
+    // $('body').append("<div id='canvasContainer'><canvas data-processing-sources='javascripts/20140518.pjs'></canvas></div>");
   });
 </script>
+<!-- <canvas data-processing-sources='javascripts/20140518.pjs'></canvas> -->
