--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -11,28 +11,38 @@
 }
 
 .container{
-	width: 960px;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	position: fixed;
 	margin: 0 auto;
 	margin-top: 10px;
 	padding: 10px;
-	// @include zurui-box;
+	z-index: 1;
 	@include box-sizing(border-box);
 }
 h1{
 	font-size: 30px;
 }
-#canvasContainer{
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	overflow: hidden;
+// #canvasContainer{
+// 	width: 100%;
+// 	height: 100%;
+// 	margin: 0;
+// 	overflow: hidden;
+// 	position: fixed;
+// }
+canvas{
+	z-index: -1;
 	position: fixed;
+	margin-left: -10px;
+	margin-top: -40px;
 }
-
 
 //
 #main {
+	margin: 0 auto;
 	margin-top: 20px;
+	width: $wrapper-width;
 }
 //blog
 .page-title{
