--- a/source/_header.erb
+++ b/source/_header.erb
@@ -1,8 +1,8 @@
 <nav>
   <ul>
     <li><a href="/">home</a></li>
-    <li><a href="blog.html">blog</a></li>
-    <li><a href="about.html">about</a></li>
-    <li><a href="works.html">works</a></li>
+    <li><%= link_to 'blog', '/blog.html' %></li>
+    <li><%= link_to 'about', '/about.html' %></li>
+    <li><%= link_to 'works', '/works.html' %></li>
   </ul>
 </nav>
