--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -14,7 +14,7 @@ per_page: 10
 
 <% page_articles.each_with_index do |article, i| %>
 <section class="post">
-  <h2 class="blog-title"><%#= link_to article.title, article %><%=article.title%></h2>
+  <h2 class="blog-title"><%= link_to article.title, article %><%#=article.title%></h2>
   <span class="date"><%= article.date.strftime('%b %e') %></span>
   <!-- use article.summary(250) if you have Nokogiri available to show just
        the first 250 characters -->
