--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,9 +6,8 @@
     <meta content='width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0' name='viewport'>
     <title>kid84<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <script src="javascripts/jquery-2.1.0.min.js"></script>
-    <script src="javascripts/processing.js"></script>
-    <script src="javascripts/script.js"></script>
+    <%= javascript_include_tag 'jquery-2.1.0.min','processing','script','anim' %>
+    
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
