--- a/source/layouts/post.erb
+++ b/source/layouts/post.erb
@@ -6,9 +6,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <title>kid84 blog<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <script src="javascripts/jquery-2.1.0.min.js"></script>
-    <script src="javascripts/script.js"></script>
-    <link rel="stylesheet" href="../stylesheets/style.css">
+    <%= stylesheet_link_tag 'style' %>
+    <%= javascript_include_tag 'jquery-2.1.0.min','processing','script','anim' %>
+    
   </head>
   <body>
 
