--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,7 +6,8 @@
     <meta content='width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0' name='viewport'>
     <title>kid84<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <%= javascript_include_tag 'jquery-2.1.0.min','processing','script','anim' %>
+    <%= stylesheet_link_tag 'style' %>
+    <%= javascript_include_tag 'jquery-2.1.0.min','processing','script','anim','test' %>
     
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -16,7 +17,7 @@
     ga('create', 'UA-52928277-1', 'auto');
     ga('send', 'pageview');
     </script>
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <!-- <link rel="stylesheet" href="stylesheets/style.css"> -->
   </head>
   <body>
     <div class="container">
