--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,8 +9,15 @@
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <script src="javascripts/jquery-2.1.0.min.js"></script>
     <script src="javascripts/processing.js"></script>
+    <script src="javascripts/run_prettify.js"></script>
     <script src="javascripts/script.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script type="text/javascript">
+    $(function(){
+      $('pre, code').addClass('prettyprint linenums');
+      prettyPrint();
+      });
+    </script>
   </head>
   <body>
     <div class="container">
@@ -21,7 +28,7 @@
       <div id="main" role="main">
         <%= yield %>
       </div>
-    
+
       <!-- <aside>
         <h2>Recent Articles</h2>
         <ol>
