--- a/source/stylesheets/include/_setting.scss
+++ b/source/stylesheets/include/_setting.scss
@@ -1,6 +1,7 @@
 @import 'compass';
 //import font
 @import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 // @import url(http://fonts.googleapis.com/css?family=Rosarivo);
 // @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:600);
 // @import url(http://fonts.googleapis.com/css?family=Gilda+Display);
@@ -11,7 +12,7 @@
 $base-bg-coler:#f5f5f5;
 $base-color: #333;
 $base-font-size: 14px;
-$base-font-family: 'Lato','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック','MS PGothic',sans-serif;
+$base-font-family:'Open Sans';
 $base-line-height: 1.5em;
 $base-link-color:#00a8bd;
 $point-color:#00a8bd;
