--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,8 +10,10 @@
   </head>
   <body>
     <div class="wrapper">
-      <%= yield %>
       <canvas id="defaultCanvas"></canvas>
+      <div class="contents">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
